# AdressNet

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
models/: history.json
src/api/: app.py  geocoder.py  predictor.py
src/data_gen/: generator.py  preprocess.py
src/model/: dataset.py  eval_report.py  model.py  train.py
src/utils/: gazetteer.py  prompts.py  schemas.py
tests/: test_api_geolocation.py  test_schemas.py
